--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  xendfinance_flutter_sdk:
+    path: "../"
+
 
     # When depending on this package from a real application you should use:
     #   flutter_plugin: ^x.y.z
